--- a/swipit project/css/full-slider.css
+++ b/swipit project/css/full-slider.css
@@ -1,4 +1,8 @@
-
+/*!
+ * Start Bootstrap - Full Slider (https://startbootstrap.com/template-overviews/full-slider)
+ * Copyright 2013-2017 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-full-slider/blob/master/LICENSE)
+ */
 
 .carousel-item {
   height: 100vh;
